# ocaml-inotify

./: inotify.opam
lib/: dune
