opam-version: "1.2"
maintainer: "whitequark <whitequark@whitequark.org>"
authors: [ "whitequark <whitequark@whitequark.org>" ]
license: "LGPL-2.1"
homepage: "https://github.com/whitequark/ocaml-inotify"
doc: "http://whitequark.github.io/ocaml-inotify"
bug-reports: "https://github.com/whitequark/ocaml-inotify/issues"
dev-repo: "git://github.com/whitequark/ocaml-inotify.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "2.0"}
  "base-unix"
  "base-bytes"
  "ocamlfind" {build}
  "fileutils" {test}
]
depopts: ["lwt"]
available: [os = "linux"]
